# Rune

./: .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  guard.yml  notify.yml
amplifier/: __init__.py
backend/: pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/tests/: test_sample.py
docs/: BRANCH_PROTECTION.md
docs/spec/: PROJECT_SPEC.md
frontend/: index.html  jest.config.ts  package.json  tsconfig.json
frontend/__tests__/: App.test.tsx
frontend/src/: App.css  App.tsx
scripts/: bulk_fix_ui_snap.sh  gen_ui_previews.py  risk_matrix.py  run_review.py  snapshot_diff_report.py  write_plans_log.py
tests/: __init__.py
